--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			h1, h2, h3 {
 				font-family: 'Ostrich Sans';
 				font-weight: 900;
+				margin: 22px 0;
 			}
 			.remark-code, .remark-inline-code { 
 				font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
@@ -22,6 +23,36 @@
 			.fright {
 				float: right;
 				width: 375px;
+			}
+			.w10 img {
+				width: 10%;
+			}
+			.w20 img {
+				width: 20%;
+			}
+			.w30 img {
+				width: 30%;
+			}
+			.w40 img {
+				width: 40%;
+			}
+			.w50 img {
+				width: 50%;
+			}
+			.w60 img {
+				width: 60%;
+			}
+			.w70 img {
+				width: 70%;
+			}
+			.w80 img {
+				width: 80%;
+			}
+			.w90 img {
+				width: 90%;
+			}
+			.vtop {
+				vertical-align: top;
 			}
 		</style>
 	</head>
